--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:textSize="@dimen/pont_size"
         android:gravity="center_horizontal|center_vertical"
-        android:text="@string/Hello"
+        android:text="@string/myName"
         android:textColor="@color/white"
         android:id="@+id/fragView"/>
 </LinearLayout>
