--- a/app/src/main/res/layout/bottom_navigation.xml
+++ b/app/src/main/res/layout/bottom_navigation.xml
@@ -55,10 +55,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/dark_gary"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toTopOf="@id/navigation"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginBottom="?attr/actionBarSize"
         />
 
 </android.support.constraint.ConstraintLayout>
