--- a/app/src/main/res/layout/recycler_view_row.xml
+++ b/app/src/main/res/layout/recycler_view_row.xml
@@ -5,9 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="5dp"
-    app:cardCornerRadius="15dp"
-    android:layout_margintop="?attr/actionBarSize"
-    android:layout_marginBottom="?attr/actionBarSize"
+    app:cardCornerRadius="5dp"
+    android:layout_marginBottom="1dp"
     android:layout_marginLeft="2dp"
     android:layout_marginRight="2dp"
     android:layout_marginStart="2dp"
