--- a/app/src/main/res/layout/recycler_view_row.xml
+++ b/app/src/main/res/layout/recycler_view_row.xml
@@ -24,14 +24,15 @@
             android:layout_height="@dimen/picture_size"
             android:layout_gravity="center_vertical"
             android:layout_margin="10dp"
-            tools:scr="@drawable/image"/>
+            tools:scr="@drawable/image"
+            />
 
         <TextView
             android:id="@+id/game_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="@dimen/pont_size"
+            android:textSize="@dimen/font_size"
             tools:text="Game"
             />
 
