--- a/app/src/main/res/layout/friend_fragment.xml
+++ b/app/src/main/res/layout/friend_fragment.xml
@@ -26,4 +26,12 @@
         android:gravity="right|top"
         android:textColor="@color/white"
         />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_user"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/dark_gary"
+        android:layout_marginBottom="?attr/actionBarSize"
+        />
 </LinearLayout>
