--- a/app/src/main/res/layout/recycler_view_row.xml
+++ b/app/src/main/res/layout/recycler_view_row.xml
@@ -36,6 +36,15 @@
             tools:text="Game"
             />
 
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textSize="@dimen/font_size"
+            tools:text="User"
+            />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
