--- a/app/src/main/res/layout/intro_activity.xml
+++ b/app/src/main/res/layout/intro_activity.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SecondActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Intro_Activity"
+    tools:layout_editor_absoluteY="25dp"
+    android:background="@color/black">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -16,28 +17,31 @@
         android:layout_centerHorizontal="true"
         />
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="@color/black"
+    <ImageView
+        android:layout_width="@dimen/logo_size"
+        android:layout_height="@dimen/logo_size"
+        android:id="@+id/logoIcon"
+        android:src="@drawable/instargram_icon"
+        android:layout_marginBottom="@dimen/logo_margin"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation"
         />
 
-    <FrameLayout
-        android:id="@+id/home_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toTopOf="@id/navigation"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="ButtonClick"
+        android:background="@color/black"
+        android:textColor="@color/white"
+        android:textSize="@dimen/font_size"
+        android:text="Start"
+        app:layout_constraintTop_toBottomOf="@id/logoIcon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
-
 
 </android.support.constraint.ConstraintLayout>
