--- a/app/src/main/res/layout/intro_activity.xml
+++ b/app/src/main/res/layout/intro_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Intro_Activity"
+    tools:context=".intro.Intro_Activity"
     tools:layout_editor_absoluteY="25dp"
     android:background="@color/black">
 
