--- a/app/src/main/res/layout/recycler_view_row.xml
+++ b/app/src/main/res/layout/recycler_view_row.xml
@@ -31,11 +31,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:textSize="@dimen/font_size"
+            android:textSize="@dimen/date_size"
             />
 
         <ImageView
-            android:id="@+id/game_picture"
+            android:id="@+id/picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -49,6 +49,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:textSize="@dimen/font_size"
+            />
+
+        <Button
+            android:id="@+id/add_like"
+            android:layout_width="@dimen/font_size"
+            android:layout_height="@dimen/font_size"
+            android:gravity="left"
+            android:background="@mipmap/ic_like"
             />
 
         <TextView
